tests/good/typing/033-func-arg.clap
** ('a -> 'b) -> 'a -> 'b
def apply (f) (x) = f (x)
