tests/bad/syntax/007-apply-function-type.clap
type apply <a, b> = (a => b) -> a -> b

